--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #666;
+            background-color: #f5f5f5;
         }
 
         .container {
@@ -48,6 +48,19 @@
             display: none;
             margin-top: 40px;
         }
+
+        footer {
+            background-color: #333;
+            padding: 20px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
+
+        footer p{
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -61,6 +74,10 @@
             <p>No dudes en explorar nuestro sitio y descubrir lo que tenemos para ti.</p>
         </div>
     </div>
+
+    <footer>
+        <p>© 2024 Andrei</p>
+    </footer>
 
     <script>
         document.getElementById('cta-button').addEventListener('click', function(event) {
