--- a/index.html
+++ b/index.html
@@ -48,9 +48,24 @@
             display: none;
             margin-top: 40px;
         }
+
+        header {
+            background-color: #333;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            color: white;
+        }
     </style>
 </head>
 <body>
+    <header>
+        <h1>Header de la Página</h1>
+    </header>
+
     <div class="container">
         <h1>Bienvenido a Nuestra Página de Aterrizaje</h1>
         <p>Esta es una página de aterrizaje simple creada con HTML, CSS y JavaScript.</p>
